Alignment fixes

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body {
 .top-text {
     font-family: 'Roboto Mono', monospace;
     color: white;
-    font-size: 1200%;
+    font-size: 1000%;
 }
 
 .section-details {
@@ -44,11 +44,17 @@ body {
     align-content: space-evenly;
 }
 
-.section-schedule,
+.section-schedule {
+    height: 98vh;
+    display: flex;
+    align-content: flex-start;
+}
+
 .section-faq {
     height: 98vh;
     display: flex;
     align-content: flex-start;
+    margin-bottom: 10rem;
 }
 
 .section-sponsors {
@@ -74,8 +80,8 @@ body {
 }
 
 .schedule-card {
-    width: 70%;
-    margin-top: 2%;
+    /* width: 70%; */
+    margin-top: 2rem;
 }
 
 .sponsor-card {
@@ -109,7 +115,7 @@ a {
 }
 
 .accordion-item {
-    margin: 2rem;
+    margin: 2rem 1px;
     border-radius: 1.5rem !important;
 }
 
